Fixed and Integrated the code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -399,8 +399,9 @@
 
         .message.bot .message-avatar {
             background: linear-gradient(135deg, var(--secondary), #2d7d32);
+            color: white; 
         }
-
+        
         .message-avatar:hover {
             transform: scale(1.1);
         }
